# The_Game_Of_Dev

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
include/calc/: ast.h  eval.h  lexer.h  parser.h  token.h
src/: calc_cli.cpp  calc_client.cpp
src/calc/: eval.cpp  lexer.cpp  parser.cpp
src/server/: main.cpp
